--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- INDEX sHTML  -->
+<!-- INDEX HTML  -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -44,7 +44,7 @@
       </div>
     </nav>
 
-    <!-- === LANDING === -->
+    <!-- === LANDINGsssss === -->
     <!--  LANDING PAGE    -->
     <div class="jumbotron jumbotron-fluid about">
       <div class="container">
